@@ -125,7 +125,7 @@ int main(int argc, char **argv) {
 	}
 
 	/* Sign the data hash. */
-	res = KSI_Signature_createAggregated(ksi, hsh, 4, &sign);
+	res = KSI_Signature_signAggregated(ksi, hsh, 4, &sign);
 //	res = KSI_createSignature(ksi, hsh, &sign);
 	if (res != KSI_OK) {
 		fprintf(stderr, "Unable to sign %d.\n", res);
